force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__AssessmentDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentDateTime__c</fullName>
    <label>Assessment Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>