force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__BillingEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillingEndDate__c</fullName>
    <label>Billing End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillingEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>