force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__BillingStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillingStartDate__c</fullName>
    <label>Billing Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillingStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>