force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__Claim_PriorityId_map_CodeSet_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Claim_PriorityId_map_CodeSet_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim_PriorityId_map_CodeSet_Id_N_1</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>Claim_PriorityId_map_CodeSet_Id_N_1</relationshipLabel>
    <relationshipName>Claim_PriorityId_map_CodeSet_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>