force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__ClaimantObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimantObject__c</fullName>
    <label>Claimant Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimantObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>