force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__ClaimPaymentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimPaymentId__c</fullName>
    <label>Claim Payment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimPaymentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>