force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__CoPayAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CoPayAmount__c</fullName>
    <label>Co Pay Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CoPayAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>