force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__DeductibleUnallocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeductibleUnallocatedAmount__c</fullName>
    <label>Deductible Unallocated Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeductibleUnallocatedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>