force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__EligibleAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__EligibleAmount__c</fullName>
    <label>Eligible Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EligibleAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>