force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__FinalizedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__FinalizedDateTime__c</fullName>
    <label>Finalized Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FinalizedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>