force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__IncidentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IncidentId__c</fullName>
    <label>Incident</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IncidentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>