force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__IsInhabitable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsInhabitable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inhabitable</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsInhabitable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>