force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__LossDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LossDateTime__c</fullName>
    <label>Loss Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LossDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>