force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__PrimaryInsuredAssetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryInsuredAssetId__c</fullName>
    <label>Primary Insured Asset</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryInsuredAssetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>