force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__PriorityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PriorityId__c</fullName>
    <label>Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PriorityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>