force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__rel_1723127953962_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723127953962_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim_ServicingLocationId_map_Health_rel</label>
    <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
    <relationshipLabel>Claim_ServicingLocationId_map_Health_rel</relationshipLabel>
    <relationshipName>rel_1723127953962_end</relationshipName>
    <type>Lookup</type>
</CustomField>