force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__rel_1723128208779_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128208779_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim_ResponsiblePartyId_map_Account_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Claim_ResponsiblePartyId_map_Account_rel</relationshipLabel>
    <relationshipName>rel_1723128208779_end</relationshipName>
    <type>Lookup</type>
</CustomField>