force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__rel_1723128321630_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128321630_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim_ClaimPaymentId_map_ClaimPaymen_rel</label>
    <referenceTo>ssot__ClaimPayment__dlm</referenceTo>
    <relationshipLabel>Claim_ClaimPaymentId_map_ClaimPaymen_rel</relationshipLabel>
    <relationshipName>rel_1723128321630_end</relationshipName>
    <type>Lookup</type>
</CustomField>