force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__ResponsiblePartyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponsiblePartyId__c</fullName>
    <label>Responsible Party</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponsiblePartyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>