force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__ResponsiblePartyObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponsiblePartyObject__c</fullName>
    <label>Responsible Party Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponsiblePartyObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>