force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__ServicingLocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicingLocationId__c</fullName>
    <label>Servicing Location</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicingLocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>