force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__ServicingLocationObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicingLocationObject__c</fullName>
    <label>Servicing Location Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicingLocationObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>