force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__SiteVisitDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__SiteVisitDateTime__c</fullName>
    <label>Site Visit Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SiteVisitDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>