force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__SubmittedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubmittedAmount__c</fullName>
    <label>Submitted Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubmittedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>