force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__TotalCoPayAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalCoPayAmount__c</fullName>
    <label>Total CoPay Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalCoPayAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>