force-app/main/default/objects/ssot__Claim__dlm/fields/ssot__TotalDeductibleUnallocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDeductibleUnallocatedAmount__c</fullName>
    <label>Total Deductible Unallocated Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDeductibleUnallocatedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>